[gd_scene load_steps=16 format=3 uid="uid://c3dasc7vgjghk"]

[ext_resource type="Texture2D" uid="uid://majifcdsi8xh" path="res://assets/sprite_sheet.png" id="1_dguww"]
[ext_resource type="Script" path="res://scenes/level_editor/editor.gd" id="1_gfdv1"]
[ext_resource type="Texture2D" uid="uid://c453jojbqlry0" path="res://assets/editor_marker.png" id="2_giimk"]
[ext_resource type="Texture2D" uid="uid://boobf28elk077" path="res://assets/editor_cursor.png" id="2_uywsa"]
[ext_resource type="Script" path="res://scenes/level_editor/editor_element.gd" id="3_40fib"]
[ext_resource type="Texture2D" uid="uid://b5ckaujr1o6y0" path="res://assets/editor_selected.png" id="4_f3dli"]
[ext_resource type="PackedScene" uid="uid://d15v1m0f60r81" path="res://scenes/game/components/ground.tscn" id="4_w4hul"]
[ext_resource type="PackedScene" uid="uid://da3mon2viisk0" path="res://scenes/game/components/obstacle_num.tscn" id="5_3km2i"]
[ext_resource type="PackedScene" uid="uid://g6i1wrpm2bxr" path="res://scenes/game/components/obstacle_repeater.tscn" id="6_e1mn5"]
[ext_resource type="PackedScene" uid="uid://dvxgo3ut6glwa" path="res://scenes/game/components/obstacle_reflecter.tscn" id="7_m3oh8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r3cln"]
atlas = ExtResource("1_dguww")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iepcc"]
atlas = ExtResource("1_dguww")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq354"]
atlas = ExtResource("1_dguww")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuo33"]
atlas = ExtResource("1_dguww")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g61k4"]
atlas = ExtResource("1_dguww")
region = Rect2(256, 256, 128, 128)

[node name="EditorScene" type="Node2D"]
script = ExtResource("1_gfdv1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
color = Color(0.294118, 0.501961, 0.792157, 1)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(768, 256)

[node name="Sprite2D" type="Sprite2D" parent="Marker2D"]
texture = ExtResource("2_giimk")

[node name="LevelRoot" type="Node2D" parent="Marker2D"]
unique_name_in_owner = true

[node name="InsertCursor" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(832, 384)
texture = ExtResource("2_uywsa")

[node name="SelectedIndicator" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(832, 384)
texture = ExtResource("4_f3dli")

[node name="EditorUI" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="EditorUI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="EditorUI/PanelContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="EditorUI/PanelContainer/MarginContainer"]
layout_mode = 2
columns = 9

[node name="Ground" type="TextureRect" parent="EditorUI/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_r3cln")
script = ExtResource("3_40fib")
scene = ExtResource("4_w4hul")

[node name="ObstacleNum" type="TextureRect" parent="EditorUI/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_iepcc")
script = ExtResource("3_40fib")
scene = ExtResource("5_3km2i")

[node name="ObstaclePortal" type="TextureRect" parent="EditorUI/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_qq354")
script = ExtResource("3_40fib")

[node name="ObstacleRepeater" type="TextureRect" parent="EditorUI/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_vuo33")
script = ExtResource("3_40fib")
scene = ExtResource("6_e1mn5")

[node name="ObstacleReflecter" type="TextureRect" parent="EditorUI/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_g61k4")
script = ExtResource("3_40fib")
scene = ExtResource("7_m3oh8")

[node name="VBoxContainer" type="VBoxContainer" parent="EditorUI"]
offset_left = 1728.0
offset_top = 768.0
offset_right = 1900.0
offset_bottom = 935.0

[node name="PlayButton" type="Button" parent="EditorUI/VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="LoadButton" type="Button" parent="EditorUI/VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Load Level"

[node name="SaveButton" type="Button" parent="EditorUI/VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Save Level
"

[node name="InfoContainer" type="PanelContainer" parent="EditorUI"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -25.0
offset_right = 245.0
offset_bottom = 25.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EditorUI/InfoContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="EditorUI/InfoContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelTitle" type="Label" parent="EditorUI/InfoContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Mouse Rela Pos"

[node name="LabelMousePos" type="Label" parent="EditorUI/InfoContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="EditorUI/InfoContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelTitle" type="Label" parent="EditorUI/InfoContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Mouse in Cell"

[node name="LabelCell" type="Label" parent="EditorUI/InfoContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="EditorUI/InfoContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelTitle" type="Label" parent="EditorUI/InfoContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Edit Mode"

[node name="LabelEditMode" type="Label" parent="EditorUI/InfoContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "EDIT_MODE.IDEL"

[connection signal="pressed" from="EditorUI/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="EditorUI/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="EditorUI/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
